[package]
name = "stu"
version = "0.6.6"
description = "TUI application for AWS S3 written in Rust using ratatui"
authors = ["Kyosuke Fujimoto <kyoro.f@gmail.com>"]
homepage = "https://github.com/lusingander/stu"
repository = "https://github.com/lusingander/stu"
readme = "README.md"
license = "MIT"
keywords = ["s3", "aws", "cli", "tui", "terminal"]
categories = ["command-line-utilities"]
edition = "2021"
rust-version = "1.81.0"

exclude = ["/.github", "/img", "/tool", "go.work*", "Makefile", "_config.yml"]

[dependencies]
ansi-to-tui = "7.0.0"
anyhow = "1.0.95"
arboard = "3.4.1"
aws-config = "1.5.16"
aws-sdk-s3 = "1.74.0"
aws-smithy-types = "1.2.11"
chrono = "0.4.39"
clap = { version = "4.5.28", features = ["derive"] }
dirs = "6.0.0"
humansize = "2.1.3"
image = "0.25.5"
infer = "0.19.0"
itsuki = "0.2.0"
laurier = "0.1.0"
once_cell = "1.20.3"
open = "5.3.2"
ratatui = { version = "0.29.0", features = ["unstable-widget-ref"] }
ratatui-image = "4.2.0"
serde = { version = "1.0.217", features = ["derive"] }
smart-default = "0.7.1"
syntect = { version = "5.2.0", default-features = false, features = [
    "default-fancy",
] }
textwrap = "0.16.1"
tokio = { version = "1.43.0", features = ["full"] }
toml = "0.8.20"
tracing = "0.1.41"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["chrono"] }
tui-input = "0.11.1"
umbra = "0.3.0"

[dev-dependencies]
rstest = "0.24.0"

[features]
imggen = [] # for test

[lints.clippy]
comparison_chain = "allow" # https://github.com/rust-lang/rust-clippy/issues/4725
