[package]
name = "stu"
version = "0.7.1"
description = "TUI application for AWS S3 written in Rust using ratatui"
authors = ["Kyosuke Fujimoto <kyoro.f@gmail.com>"]
homepage = "https://github.com/lusingander/stu"
repository = "https://github.com/lusingander/stu"
readme = "README.md"
license = "MIT"
keywords = ["s3", "aws", "cli", "tui", "terminal"]
categories = ["command-line-utilities"]
edition = "2021"
rust-version = "1.81.0"

exclude = ["/.github", "/img", "/tool", "go.work*", "Makefile", "_config.yml"]

[dependencies]
ansi-to-tui = "7.0.0"
anyhow = "1.0.97"
arboard = "3.4.1"
aws-config = "1.6.1"
aws-sdk-s3 = "1.81.0"
aws-smithy-types = "1.3.0"
chrono = "0.4.40"
clap = { version = "4.5.34", features = ["derive"] }
console = "0.15.11"
crossterm = { version = "0.28.1", features = ["event-stream"] }
dirs = "6.0.0"
encoding_rs = "0.8.35"
futures = "0.3.31"
humansize = "2.1.3"
image = "0.25.6"
indexmap = { version = "2.8.0", features = ["serde"] }
infer = "0.19.0"
itsuki = "0.2.1"
laurier = "0.1.0"
once_cell = "1.21.3"
open = "5.3.2"
ratatui = { version = "0.29.0", features = ["unstable-widget-ref"] }
ratatui-image = "5.0.0"
serde = { version = "1.0.219", features = ["derive"] }
smart-default = "0.7.1"
syntect = { version = "5.2.0", default-features = false, features = [
    "default-fancy",
] }
textwrap = "0.16.2"
tokio = { version = "1.44.1", features = ["full"] }
toml = "0.8.20"
tracing = "0.1.41"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["chrono"] }
tui-input = "0.11.1"
umbra = "0.4.0"

[dev-dependencies]
rstest = "0.25.0"

[features]
imggen = [] # for test

[lints.clippy]
comparison_chain = "allow" # https://github.com/rust-lang/rust-clippy/issues/4725

[profile.release]
codegen-units = 1
lto = true
