[package]
name = "stu"
version = "0.7.5"
description = "TUI application for AWS S3 written in Rust using ratatui"
authors = ["Kyosuke Fujimoto <kyoro.f@gmail.com>"]
homepage = "https://lusingander.github.io/stu/"
repository = "https://github.com/lusingander/stu"
readme = "README.md"
license = "MIT"
keywords = ["s3", "aws", "cli", "tui", "terminal"]
categories = ["command-line-utilities"]
edition = "2021"
rust-version = "1.90.0"

exclude = ["/.github", "/img", "/tool", "Makefile", "/docs"]

[dependencies]
ansi-to-tui = "8.0.0"
anyhow = "1.0.100"
arboard = { version = "3.6.1", features = ["wayland-data-control"] }
aws-config = "1.8.12"
aws-sdk-s3 = "1.119.0"
aws-smithy-types = "1.3.5"
chardetng = "0.1.17"
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive"] }
console = "0.16.1"
crossterm = { version = "0.29.0", features = ["event-stream"] }
encoding_rs = "0.8.35"
futures = "0.3.31"
humansize = "2.1.3"
image = "0.25.9"
indexmap = { version = "2.12.1", features = ["serde"] }
infer = "0.19.0"
itsuki = "0.2.1"
laurier = "0.3.0"
once_cell = "1.21.3"
open = "5.3.3"
ratatui = "0.30.0"
ratatui-image = { version = "10.0.2", default-features = false, features = [
    "crossterm",
    "image-defaults",
] }
serde = { version = "1.0.219", features = ["derive"] }
smart-default = "0.7.1"
syntect = { version = "5.2.0", default-features = false, features = [
    "default-fancy",
] }
textwrap = "0.16.2"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.8"
tracing = "0.1.44"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.22", features = ["chrono"] }
tui-input = "0.15.0"
umbra = "0.4.0"

[dev-dependencies]
rstest = "0.26.1"

[profile.release]
codegen-units = 1
lto = true
